[tool.poetry]
name = "column_print"
version = "0.2.0"
description = "Terminal print strings in columns."
authors = ["SteveDaulton <stevedaulton@gmail.com>"]
license = "GPLv2+"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.2"
pylint = "^2.9.6"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
